--- a/music.html
+++ b/music.html
@@ -9,7 +9,11 @@
     <a href="index.html">Home</a>
     <a href="music.html">Music</a>
 </header>
-<main></main>
+<main>
+    <section>
+        
+    </section>
+</main>
 <footer></footer>
 
 <body>   
