--- a/music.html
+++ b/music.html
@@ -16,6 +16,9 @@
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
+        <div id="post_malone">
+            <h1>Post Malone</h1>
+        </div>
     </section>
 </main>
 <footer></footer>
