--- a/music.html
+++ b/music.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
 </head>
 <header>
@@ -10,14 +11,16 @@
     <a href="music.html">Music</a>
 </header>
 <main>
-    <section>
-        <div id="pink_floyd">
+    <section class="bandsection">
+        <div class="individualband" id="pink_floyd">
             <h1>Pink Floyd</h1>
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
-        <div id="post_malone">
+        <div class="individualband" id="post_malone">
             <h1>Post Malone</h1>
+            <p>Pigs (Three Different Ones)</p>
+            <p>If</p>
         </div>
     </section>
 </main>
