--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
 </head>
-<header>
+<header class="cabecalho">
     <a href="index.html">Home</a>
     <a href="music.html">Music</a>
+    <a href="movie.html">Movie</a>
+    <a href="serie.html">Serie</a>
 </header>
 <main></main>
 <footer></footer>
