--- a/music.html
+++ b/music.html
@@ -6,24 +6,42 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
 </head>
-<header>
+<header class="cabecalho">
     <a href="index.html">Home</a>
     <a href="music.html">Music</a>
+    <a href="movie.html">Movie</a>
+    <a href="serie.html">Serie</a>
 </header>
+
 <main>
     <section class="bandsection">
-        <div class="individualband" id="pink_floyd">
-            <h1>Pink Floyd</h1>
+        <div class="bandsection__individualband" id="post_malone">
+            <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
-        <div class="individualband" id="post_malone">
-            <h1>Post Malone</h1>
+        <div class="bandsection__individualband" id="post_malone">
+            <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
+            <p>Pigs (Three Different Ones)</p>
+            <p>If</p>
+        </div>
+        <div class="bandsection__individualband" id="post_malone">
+            <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
+            <p>Pigs (Three Different Ones)</p>
+            <p>If</p>
+        </div>
+        <div class="bandsection__individualband" id="post_malone">
+            <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
     </section>
 </main>
+
 <footer></footer>
 
 <body>   
