--- a/music.html
+++ b/music.html
@@ -21,9 +21,9 @@
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
-        <div class="bandsection__individualband" id="post_malone">
+        <div class="bandsection__individualband" id="titas">
             <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
-            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
+            <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
