--- a/music.html
+++ b/music.html
@@ -15,9 +15,9 @@
 
 <main>
     <section class="bandsection">
-        <div class="bandsection__individualband" id="post_malone">
+        <div class="bandsection__individualband" id="pink_floyd">
             <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
-            <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
+            <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
             <p>Pigs (Three Different Ones)</p>
             <p>If</p>
         </div>
