--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
     <a href="serie.html">Serie</a>
 </header>
 
-<main>
+<main class="principal">
     <section class="bandsection">
         <div class="bandsection__individualband" id="pink_floyd">
             <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
