começando a ficar como quero

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <header class="cabecalho">
-    <a href="index.html">Home</a>
-    <a href="music.html">Music</a>
-    <a href="movie.html">Movie</a>
-    <a href="serie.html">Serie</a>
+    <a class="cabecalho__links" href="index.html">HOME</a>
+    <a class="cabecalho__links" href="music.html">MUSIC</a>
+    <a class="cabecalho__links" href="movie.html">MOVIE</a>
+    <a class="cabecalho__links" href="serie.html">SERIE</a>
+    <a class="cabecalho__links" href="anime.html">ANIME</a>
+    <a class="cabecalho__links" href="game.html">GAME</a>
 </header>
 <main></main>
 <footer></footer>
