--- a/music.html
+++ b/music.html
@@ -10,10 +10,12 @@
 
 <body>
     <header class="cabecalho">
-        <a href="index.html">Home</a>
-        <a href="music.html">Music</a>
-        <a href="movie.html">Movie</a>
-        <a href="serie.html">Serie</a>
+        <a class="cabecalho__links" href="index.html">HOME</a>
+        <a class="cabecalho__links" href="music.html">MUSIC</a>
+        <a class="cabecalho__links" href="movie.html">MOVIE</a>
+        <a class="cabecalho__links" href="serie.html">SERIE</a>
+        <a class="cabecalho__links" href="anime.html">ANIME</a>
+        <a class="cabecalho__links" href="game.html">GAME</a>
     </header>
 
 
@@ -24,29 +26,29 @@
             <div class="bandsection__individualband" id="pink_floyd">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
-                <p>Pigs (Three Different Ones)</p>
-                <p>If</p>
+                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
+                <h2 class="bandsection__individualband__faixas" >If</h2>
             </div>
 
             <div class="bandsection__individualband" id="titas">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
-                <p>Pigs (Three Different Ones)</p>
-                <p>If</p>
+                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
+                <h2 class="bandsection__individualband__faixas" >If</h2>
             </div>
 
-            <div class="bandsection__individualband" id="post_malone">
+            <div class="bandsection__individualband" id="radiohead">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
-                <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                <p>Pigs (Three Different Ones)</p>
-                <p>If</p>
+                <h1 class="bandsection__individualband__nomebanda">Radiohead</h1>
+                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
+                <h2 class="bandsection__individualband__faixas" >If</h2>
             </div>
             
             <div class="bandsection__individualband" id="post_malone">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                <p>Pigs (Three Different Ones)</p>
-                <p>If</p>
+                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
+                <h2 class="bandsection__individualband__faixas" >If</h2>
             </div>
 
         </section>
