--- a/music.html
+++ b/music.html
@@ -24,31 +24,31 @@
         <section class="bandsection">
             
             <div class="bandsection__individualband" id="pink_floyd">
-                <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+                <img class="bandsection__individualband__fotoartista" src="imagens/pinkfloyd.png">
                 <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
                 <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
                 <h2 class="bandsection__individualband__faixas" >If</h2>
             </div>
 
             <div class="bandsection__individualband" id="titas">
-                <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+                <img class="bandsection__individualband__fotoartista" src="imagens/titas.png">
                 <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
-                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
-                <h2 class="bandsection__individualband__faixas" >If</h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
             </div>
 
             <div class="bandsection__individualband" id="radiohead">
-                <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
+                <img class="bandsection__individualband__fotoartista" src="imagens/radiohead.png">
                 <h1 class="bandsection__individualband__nomebanda">Radiohead</h1>
-                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
-                <h2 class="bandsection__individualband__faixas" >If</h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
             </div>
             
             <div class="bandsection__individualband" id="post_malone">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
-                <h2 class="bandsection__individualband__faixas" >If</h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
             </div>
 
         </section>
