--- a/music.html
+++ b/music.html
@@ -47,9 +47,17 @@
             <div class="bandsection__individualband" id="post_malone">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                 <h2 class="bandsection__individualband__faixas" ></h2>
-                 <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
-                 <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" ></h2>
+                <h2 class="bandsection__individualband__faixas" >Hollywood's Bleeding</h2>
+                <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
+                <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
                 <h2 class="bandsection__individualband__faixas" ></h2>
             </div>
 
