--- a/music.html
+++ b/music.html
@@ -26,39 +26,47 @@
             <div class="bandsection__individualband" id="pink_floyd">
                 <img class="bandsection__individualband__fotoartista" src="imagens/pinkfloyd.png">
                 <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
-                <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
-                <h2 class="bandsection__individualband__faixas" >If</h2>
+                <div class="bandsection__individualband__musicsband">
+                    <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
+                    <h2 class="bandsection__individualband__faixas" >If</h2>
+                </div>
             </div>
 
             <div class="bandsection__individualband" id="titas">
                 <img class="bandsection__individualband__fotoartista" src="imagens/titas.png">
                 <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
+                <div class="bandsection__individualband__musicsband">
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                </div>
             </div>
 
             <div class="bandsection__individualband" id="radiohead">
                 <img class="bandsection__individualband__fotoartista" src="imagens/radiohead.png">
                 <h1 class="bandsection__individualband__nomebanda">Radiohead</h1>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
+                <div class="bandsection__individualband__musicsband">
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                </div>
             </div>
             
             <div class="bandsection__individualband" id="post_malone">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
-                <h2 class="bandsection__individualband__faixas" >Hollywood's Bleeding</h2>
-                <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
-                <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
-                <h2 class="bandsection__individualband__faixas" ></h2>
+                <div class="bandsection__individualband__musicsband">
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" >Hollywood's Bleeding</h2>
+                    <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
+                    <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                </div>
             </div>
 
         </section>
