atualização no codigo

--- a/music.html
+++ b/music.html
@@ -22,6 +22,25 @@
     <main class="principal">
 
         <section class="bandsection">
+
+            <div class="bandsection__individualband" id="caixa_de_entrada">
+                <img class="bandsection__individualband__fotoartista" src="imagens/inear_box.png">
+                <h1 class="bandsection__individualband__nomebanda">Caixa de Entrada</h1>
+                <div class="bandsection__individualband__musicsband">
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                    <h2 class="bandsection__individualband__faixas" ></h2>
+                </div>
+            </div>
             
             <div class="bandsection__individualband" id="pink_floyd">
                 <img class="bandsection__individualband__fotoartista" src="imagens/pinkfloyd.png">
@@ -62,7 +81,7 @@
                     <h2 class="bandsection__individualband__faixas" ></h2>
                     <h2 class="bandsection__individualband__faixas" ></h2>
                     <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" >Hollywood's Bleeding</h2>
+                    <h2 class="bandsection__individualband__faixas" ><a href="#">Hollywood's Bleeding</a></h2>
                     <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
                     <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
                     <h2 class="bandsection__individualband__faixas" ></h2>
