--- a/music.html
+++ b/music.html
@@ -26,66 +26,43 @@
             <div class="bandsection__individualband" id="caixa_de_entrada">
                 <img class="bandsection__individualband__fotoartista" src="imagens/inear_box.png">
                 <h1 class="bandsection__individualband__nomebanda">Caixa de Entrada</h1>
-                <div class="bandsection__individualband__musicsband">
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                </div>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                </ul>
             </div>
             
             <div class="bandsection__individualband" id="pink_floyd">
                 <img class="bandsection__individualband__fotoartista" src="imagens/pinkfloyd.png">
                 <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
-                <div class="bandsection__individualband__musicsband">
-                    <h2 class="bandsection__individualband__faixas" >Pigs (Three Different Ones)</h2>
-                    <h2 class="bandsection__individualband__faixas" >If</h2>
-                </div>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                </ul>
             </div>
 
             <div class="bandsection__individualband" id="titas">
                 <img class="bandsection__individualband__fotoartista" src="imagens/titas.png">
                 <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
-                <div class="bandsection__individualband__musicsband">
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                </div>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                </ul>
             </div>
 
             <div class="bandsection__individualband" id="radiohead">
                 <img class="bandsection__individualband__fotoartista" src="imagens/radiohead.png">
                 <h1 class="bandsection__individualband__nomebanda">Radiohead</h1>
-                <div class="bandsection__individualband__musicsband">
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                </div>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                </ul>
             </div>
             
             <div class="bandsection__individualband" id="post_malone">
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
-                <div class="bandsection__individualband__musicsband">
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                    <h2 class="bandsection__individualband__faixas" ><a href="#">Hollywood's Bleeding</a></h2>
-                    <h2 class="bandsection__individualband__faixas" >Rockstar (part. 21 Savage)</h2>
-                    <h2 class="bandsection__individualband__faixas" >Congratulations (part. Quavo)</h2>
-                    <h2 class="bandsection__individualband__faixas" ></h2>
-                </div>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#">Hollywood's Bleeding</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#">Rockstar (part. 21 Savage)</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#">Congratulations (part. Quavo)</a></li>
+                </ul>
             </div>
 
         </section>
