Adição dos links _blank

--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/pinkfloyd.png">
                 <h1 class="bandsection__individualband__nomebanda">Pink Floyd</h1>
                 <ul class="bandsection__individualband__musicsband">
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
 
@@ -43,7 +43,7 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/titas.png">
                 <h1 class="bandsection__individualband__nomebanda">Titãs</h1>
                 <ul class="bandsection__individualband__musicsband">
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
 
@@ -51,7 +51,7 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/radiohead.png">
                 <h1 class="bandsection__individualband__nomebanda">Radiohead</h1>
                 <ul class="bandsection__individualband__musicsband">
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
             
@@ -59,9 +59,9 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/postmalone.png">
                 <h1 class="bandsection__individualband__nomebanda">Post Malone</h1>
                 <ul class="bandsection__individualband__musicsband">
-                    <li class="bandsection__individualband__faixas"><a href="#">Hollywood's Bleeding</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#">Rockstar (part. 21 Savage)</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#">Congratulations (part. Quavo)</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=w5GrxfjuTTI" target="_blank">Hollywood's Bleeding</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=UceaB4D0jpo" target="_blank">Rockstar (part. 21 Savage)</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=SC4xMk98Pdc" target="_blank">Congratulations (part. Quavo)</a></li>
                 </ul>
             </div>
 
