--- a/music.html
+++ b/music.html
@@ -27,7 +27,15 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/inear_box.png">
                 <h1 class="bandsection__individualband__nomebanda">Caixa de Entrada</h1>
                 <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#">Photograph</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#">Advance Cassette</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#">What Else Is There ?</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#">A Palo Seco</a></li>
                     <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
+                
                 </ul>
             </div>
             
@@ -62,6 +70,14 @@
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=w5GrxfjuTTI" target="_blank">Hollywood's Bleeding</a></li>
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=UceaB4D0jpo" target="_blank">Rockstar (part. 21 Savage)</a></li>
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=SC4xMk98Pdc" target="_blank">Congratulations (part. Quavo)</a></li>
+                </ul>
+            </div>
+
+            <div class="bandsection__individualband" id="iron-maiden">
+                <img class="bandsection__individualband__fotoartista" src="imagens/iron-maiden.png">
+                <h1 class="bandsection__individualband__nomebanda">Iron Maiden</h1>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
 
