--- a/music.html
+++ b/music.html
@@ -77,6 +77,18 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/iron-maiden.png">
                 <h1 class="bandsection__individualband__nomebanda">Iron Maiden</h1>
                 <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=7DcVwd31uC0&list=PLIKpCFu8Fpmn-0_lGczCaEKJD4pGGzFkd" target="_blank">Prowler</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=p2ct4xXak24&list=PLIKpCFu8Fpmn-0_lGczCaEKJD4pGGzFkd&index=4" target="_blank">Phantom Of The Opera</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                     <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
