adiçao de musicas

--- a/music.html
+++ b/music.html
@@ -27,10 +27,10 @@
                 <img class="bandsection__individualband__fotoartista" src="imagens/inear_box.png">
                 <h1 class="bandsection__individualband__nomebanda">Caixa de Entrada</h1>
                 <ul class="bandsection__individualband__musicsband">
-                    <li class="bandsection__individualband__faixas"><a href="#">Photograph</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#">Advance Cassette</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#">What Else Is There ?</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#">A Palo Seco</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=nSDgHBxUbVQ">Photograph</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=rtpwSuZtxxg">Advance Cassette</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=ADBKdSCbmiM">What Else Is There ?</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=W6i-b_nUhKw">A Palo Seco</a></li>
                     <li class="bandsection__individualband__faixas"><a href="#"></a></li>
                     <li class="bandsection__individualband__faixas"><a href="#"></a></li>
                     <li class="bandsection__individualband__faixas"><a href="#"></a></li>
