musicas linkin park

--- a/music.html
+++ b/music.html
@@ -31,11 +31,7 @@
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=rtpwSuZtxxg">Advance Cassette</a></li>
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=ADBKdSCbmiM">What Else Is There ?</a></li>
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=W6i-b_nUhKw">A Palo Seco</a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>
-                
+                    <li class="bandsection__individualband__faixas"><a href="#"></a></li>                
                 </ul>
             </div>
             
@@ -80,15 +76,17 @@
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=7DcVwd31uC0&list=PLIKpCFu8Fpmn-0_lGczCaEKJD4pGGzFkd" target="_blank">Prowler</a></li>
                     <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=p2ct4xXak24&list=PLIKpCFu8Fpmn-0_lGczCaEKJD4pGGzFkd&index=4" target="_blank">Phantom Of The Opera</a></li>
                     <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
-                    <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
+                </ul>
+            </div>
+
+            <div class="bandsection__individualband" id="linkin-park">
+                <img class="bandsection__individualband__fotoartista" src="imagens/linkin-park.png">
+                <h1 class="bandsection__individualband__nomebanda">Linkin Park</h1>
+                <ul class="bandsection__individualband__musicsband">
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=vjVkXlxsO8Q" target="_blank">Papercut</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=Gd9OhYroLN0" target="_blank">Crawling</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=eVTXPUF4Oz4" target="_blank">In The End</a></li>
+                    <li class="bandsection__individualband__faixas"><a href="https://www.youtube.com/watch?v=FPjm9ujeJgQ" target="_blank">Pushing Me Away</a></li>
                     <li class="bandsection__individualband__faixas"><a href="#" target="_blank"></a></li>
                 </ul>
             </div>
